# c0nsume-qwen

./: .gitignore  README.md  download_instructions.txt  god.txt  qwen_torchao.ipynb
client/: Cargo.toml  README.md
client/src/: consts.rs  main.rs  types.rs
client/src/routes/: generate.rs  image.rs  mod.rs  upload.rs
client/static/: index.html  style.css
client/static/css/: basicScene.css  imageEditor.css  imageGenerator.css  layerGenerator.css  menubar.css  sidebar.css
client/static/js/: app.js  basicScene.js  imageEditor.js  imageGenerator.js  layerGenerator.js  menubar.js  sidebar.js
client/static/shaders/cameras/: bg_fullscreen.wgsl
notebooks/: qwen_edit_bnb.ipynb  qwen_edit_torchao.ipynb  qwen_img_bnb.ipynb
server/: README.md  app.py  config.py
server/core/: factory.py
server/routes/: __init__.py  generate.py  health.py  images.py
server/services/: inference.py  lora_manager.py  models.py  storage.py
