[package]
name = "c0nsume_qwen_frontend"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "*"
actix-files = "*"
serde = { version = "*", features = ["derive"] }
reqwest = { version = "*", features = ["json", "multipart"] }
dotenvy = "*"
serde_json = "1"
uuid = { version = "1.18.0", features = ["v4"] }
actix-multipart = "*"
futures-util = "*"
